# VP

./: .gitignore  README.md  guide.md  taskReport.md
.agents/workflows/: phase0_setup.md  phase1_tracking.md  phase2_ue_plugin.md  phase3_animation.md  phase4_broadcast.md  workflow.md
VPPipeline/: UpgradeLog.htm  VPPipeline.uproject
VPPipeline/Config/: DefaultEngine.ini  DefaultGame.ini
VPPipeline/Content/Actor/: BP_Receiver.uasset
VPPipeline/Content/Actor/Avatar/: ABP_Post_AvatarSample_A.uasset  A_face_AvatarSample_A.uasset  IK_AvatarSample_A_Mannequin.uasset  IK_AvatarSample_A_MannequinBone.uasset  IK_AvatarSample_A_VrmHumanoid.uasset  IK_UEFN_AvatarSample_A_Mannequin.uasset  MI_N00_000_00_Body_00_SKIN__Instance_.uasset  MI_N00_000_00_Body_00_SKIN__Instance__outline.uasset  MI_N00_000_00_EyeHighlight_00_EYE__Instance_.uasset  MI_N00_000_00_EyeHighlight_00_EYE__Instance__outline.uasset  MI_N00_000_00_EyeIris_00_EYE__Instance_.uasset  MI_N00_000_00_EyeIris_00_EYE__Instance__outline.uasset  (+59 more)
VPPipeline/Content/Data/: VRoidBlendshapeMapping.csv  VRoidBlendshapeMapping.uasset
VPPipeline/Content/Maps/: Lvl_Empty.umap
VPPipeline/Content/Materials/: M_GreenScreen.uasset
VPPipeline/Plugins/VPTrackerReceiver/: VPTrackerReceiver.uplugin
VPPipeline/Source/: VPPipeline.Target.cs  VPPipelineEditor.Target.cs
VPPipeline/Source/VPPipeline/: VPPipeline.Build.cs  VPPipeline.cpp
vp-tracker/: debug_all_bs.py  debug_mouth.py  launcher.py  main.py  mcp_server.py  obs_controller.py  pyproject.toml  render_img.py  sender.py  test_phase1.py  test_phase3.py  tracker.py
(+10 files in other folders)
